@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-16T00:46:45Z",
-  "count_outdated" : 1850,
-  "uniques_outdated" : 577,
-  "count" : 1869,
-  "uniques" : 589,
+  "timestamp" : "2022-10-16T08:08:55Z",
+  "count_outdated" : 1852,
+  "uniques_outdated" : 579,
+  "count" : 1870,
+  "uniques" : 590,
   "clones" : [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-10-08T00:00:00Z",
       "count": 1,
@@ -67,6 +60,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-10-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
