@@ -1,12 +1,7 @@
 {
-  "count": 19,
+  "count": 18,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-10-02T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-10-08T00:00:00Z",
       "count": 1,
@@ -46,6 +41,11 @@
       "timestamp": "2022-10-15T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
