@@ -1,3 +1,11 @@
+2022-10-16T08:08:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3258767360 # 943
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 577 1850 / 589 1869
+* notice: next accum: outdated-unq outdated-all / unq all: 579 1852 / 590 1870
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-10-02] / [2022-10-16]
+
 2022-10-16T00:46:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3257728369 # 942
 * notice: last 14d: unq all: 4 19
